# cooper-im-server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controller/: AVCallController.cpp  AVCallController.hpp  FileController.cpp  FileController.hpp  FriendController.cpp  FriendController.hpp  GroupController.cpp  GroupController.hpp  LiveController.cpp  LiveController.hpp  MsgController.cpp  MsgController.hpp  PyqController.cpp  PyqController.hpp  UserController.cpp  UserController.hpp
define/: IMDefine.hpp
entity/: Entity.hpp
service/: UserService.cpp  UserService.hpp
store/: IMStore.cpp  IMStore.hpp
test/: AddTestData.cpp  IMUtilTest.cpp  JsonTest.cpp  JwtUtilTest.cpp  MD5Test.cpp  MySQLTest.cpp  RedisTest.cpp
util/: IMUtil.cpp  IMUtil.hpp  JwtUtil.cpp  JwtUtil.hpp  MD5.cpp  MD5.hpp
